# EasyJNI

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: pull_push_request.yml
crate/: Cargo.toml
crate/src/: classes.rs  conversion.rs  errors.rs  java_types.rs  lib.rs
src/: classes.rs  conversion.rs  errors.rs  lib.rs
tests/: Cargo.toml  Makefile  Makefile.toml
tests/kotlin/: Main.kt  Rust.kt
tests/src/: files.rs  lib.rs
