[package]
name = "easy-jni"
version = "0.3.0"
authors = ["448 ENGINEERING Developers <superuser@448.africa>"]
edition = "2021"
description = "Making Rust JNI calls easy"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/448-ENGINEERING/EasyJNI"
homepage = "https://github.com/448-ENGINEERING/EasyJNI"
categories = ["development-tools::ffi"]
keywords = ["kotlin", "java", "android"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.21.1", features = ["invocation"] }


[features]
default = ["simple_types"]
simple_types = []
complex_types = ["simple_types"]
conversion = ["simple_types"]
full = ["simple_types", "complex_types", "conversion"]
