[package]
name = "rust-kotlin"
version = "0.1.0"
authors = ["XOR·APPS <developers@xorapps.network>"]
license = "CC0-1.0"
description = "How to compile Rust shared library and execute with Kotlin"
publish = false
edition = "2021"

[lib]
name = "rust_kotlin"
crate-type = ["cdylib"]

[dependencies]
easy-jni = { path = "../crate", features = [
    "simple_types",
    "complex_types",
    "conversion",
] }
futures-lite = "1.13.0"
smol = "1.3.0"
